--- a/src/add_equation_window.ui
+++ b/src/add_equation_window.ui
@@ -104,7 +104,7 @@
             <child>
               <object class="AdwActionRow">
                 <property name="visible">True</property>
-                <property name="can-focus">False</property>
+                <property name="can-focus">True</property>
                 <property name="title" translatable="yes">Step Size</property>
                 <property name="subtitle" translatable="yes">The step size to be used</property>
                 <property name="use-underline">True</property>
