--- a/src/transform_window.ui
+++ b/src/transform_window.ui
@@ -32,7 +32,7 @@
 
 Transformations are done piece-wise, if you want access to the entire range use X_range or Y_range. e.g. Y = Y/max(X_range) divides each Y value by the largest value of X.
 
-To convert a value from degrees to radians use radians(value).</property>
+To convert a value from degrees into radians use radians(value), e.g. Y = sin(radians(X)).</property>
             <property name="margin-start">30</property>
             <property name="margin-end">30</property>
             <property name="margin-top">20</property>
